# fast-zero-4.0

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yml
migrations/: env.py
migrations/versions/: 148626465bb8_create_todos_table.py  8dfb74629f60_add_updated_at_to_users_table.py  9290041e60fd_create_users_table.py  aae355c6a4f6_add_timestamps_to_todos_table.py
src/fast_zero/: app.py
src/fast_zero/db/: connection.py  models.py
src/fast_zero/dependencies/: annotated_types.py
src/fast_zero/helpers/: exceptions.py  security.py
src/fast_zero/routers/: auth.py  todos.py  users.py
src/fast_zero/schemas/: schemas.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
